# fcoin

./: .gitignore  Dockerfile  README.md  agent_runner.py  app.yaml  pyproject.toml  render.yaml
.do/: Dockerfile  deploy-guide.md
.github/workflows/: deploy.yml
docs/: index.html
examples/: minimal.py  trading_agent.py
installers/: install.js  install.ps1  install.sh
scripts/: inject_registry_widget.py
src/: __init__.py  __main__.py  agent.py  auto_trader.py  exchange.py  prompts.py  server.py  stream.py
src/prompts/: __init__.py
src/providers/: __init__.py  anthropic_.py  ollama_.py  openai_.py
src/resources/: __init__.py
src/tools/: __init__.py  trading.py
src/transport/: __init__.py  dashboard.html  dashboard_ar.html  dashboard_de.html  dashboard_es.html  dashboard_fr.html  dashboard_hi.html  dashboard_jp.html  dashboard_ko.html  dashboard_pt.html  dashboard_ru.html  dashboard_zh.html  sse.py
src/transport/static/: registry.css  registry.js
