[project]
name = "fcoin-mcp-agent"
version = "0.1.0"
description = "Universal MCP agent scaffold — model-agnostic, multi-transport"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
]
sse = [
    "cryptography",
    "sse-starlette",
    "uvicorn[standard]",
]

[project.scripts]
fcoin-agent = "fcoin.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
